# todotui

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile
cmake/: SetupHunter.cmake
src/: main.cc  main.cpp
src/ncurses/: CMakeLists.txt  ncurses.h  window.cpp  window.h
src/todo/: CMakeLists.txt  item.cpp  item.h  item_test.cpp  list.h
src/todotxt/: CMakeLists.txt  item.cpp  item.h  item_test.cpp  list.cpp  list.h  todolist.cpp  todolist.h
src/tui/: CMakeLists.txt  app.cpp  app.h  window.cpp  window.h
